--- a/water effect.html
+++ b/water effect.html
@@ -1,4 +1,18 @@
-*
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+<link rel="stylesheet" href="css/style.css">
+    <title>water effect in a word</title>
+</head>
+<body>
+    <div class="content">
+        <h2>Water</h2>
+        <h2>Water</h2>
+    </div>
+
+    <style>
+        *
 {
     margin: 0;
     padding: 0;
@@ -53,3 +67,7 @@ const
         clip-path: polygon(1% 29%, 8% 30%, 18% 36%, 27% 47%, 32% 58%, 41% 67%, 52% 75%, 64% 76%, 77% 74%, 87% 68%, 92% 59%, 97% 53%, 100% 48%, 100% 100%, 1% 100%);
     }
 }
+    </style>
+    
+</body>
+</html>
